--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "npm-run-all": "^4.1.5",
     "pinia": "^2.0.28",
     "sass": "1.57.1",
+    "tsx": "3.12.2",
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
     "vue": "^3.2.45",
@@ -28,5 +29,6 @@
   },
   "volta": {
     "node": "18.13.0"
-  }
+  },
+  "packageManager": "pnpm@7.25.0"
 }
