--- a/.github/workflows/sync-gitee.yml
+++ b/.github/workflows/sync-gitee.yml
@@ -12,11 +12,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Sync Gitee Mirror
-        uses: abersheeran/sync-gitee-mirror@v1-beta
+        uses: wearerequired/git-mirror-action@master
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.GITEE_RSA_PRIVATE_KEY }}
         with:
-          repository: gkd-viewer/gkd-viewer
-          username: ${{ secrets.GITEE_USERNAME }}
-          password: ${{ secrets.GITEE_PASSWORD }}
+          source-repo: git@github.com:lisonge/gkd-viewer.git
+          destination-repo: git@gitee.com:gkd-viewer/gkd-viewer.git
 
       - name: Build Gitee Pages
         uses: yanglbme/gitee-pages-action@main
