--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -12,8 +12,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - uses: volta-cli/action@v3
+      - run: node -v
+
       - uses: pnpm/action-setup@v2
+      - run: pnpm -v
 
       - run: pnpm install
       - run: pnpm run build
