--- a/.github/workflows/sync-gitee.yml
+++ b/.github/workflows/sync-gitee.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Black list
+      - name: Sync Gitee Mirror
         uses: Yikun/hub-mirror-action@master
         with:
           src: github/lisonge
