--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -14,7 +14,13 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: volta-cli/action@v3
-      - run: node -v
+
+      - name: download volta node
+        uses: nick-fields/retry@v2
+        with:
+          timeout_seconds: 114514
+          max_attempts: 3
+          command: node -v
 
       - uses: pnpm/action-setup@v2
       - run: pnpm -v
