perf: file save

--- a/package.json
+++ b/package.json
@@ -15,33 +15,32 @@
     "@types/node": "^18.15.12",
     "@types/prettier": "2.7.2",
     "@vitejs/plugin-legacy": "^4.0.3",
-    "@vitejs/plugin-vue": "^4.2.1",
+    "@vitejs/plugin-vue": "^4.2.2",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
-    "@vue/tsconfig": "^0.1.3",
-    "@vueuse/core": "10.1.2",
-    "browser-fs-access": "0.33.1",
+    "@vue/tsconfig": "^0.3.2",
+    "@vueuse/core": "^10.1.2",
+    "browser-fs-access": "^0.33.1",
     "compress-json": "^2.1.2",
     "dayjs": "^1.11.7",
-    "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
     "localforage": "^1.10.0",
     "naive-ui": "^2.34.3",
     "normalize.css": "^8.0.1",
     "npm-run-all": "^4.1.5",
-    "pinia": "^2.0.35",
+    "pinia": "^2.0.36",
     "prettier": "^2.8.8",
     "sass": "^1.62.1",
     "tsx": "^3.12.7",
     "typescript": "^5.0.4",
     "unocss": "0.51.12",
     "vite": "^4.3.5",
-    "vite-plugin-monkey": "^3.1.4",
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6",
+    "vite-plugin-monkey": "^3.2.1",
+    "vue": "^3.3.1",
+    "vue-router": "^4.2.0",
     "vue-tsc": "^1.6.4"
   },
   "volta": {
     "node": "18.13.0"
   },
-  "packageManager": "pnpm@7.28.0"
+  "packageManager": "pnpm@8.5.0"
 }
