--- a/package.json
+++ b/package.json
@@ -11,33 +11,35 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@intlify/unplugin-vue-i18n": "^0.11.0",
     "@types/file-saver": "^2.0.5",
-    "@types/node": "^18.15.12",
-    "@types/prettier": "2.7.2",
-    "@vitejs/plugin-legacy": "^4.0.3",
-    "@vitejs/plugin-vue": "^4.2.2",
+    "@types/node": "^18.16.16",
+    "@types/prettier": "^2.7.2",
+    "@vitejs/plugin-legacy": "^4.0.4",
+    "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
-    "@vue/tsconfig": "^0.3.2",
+    "@vue/tsconfig": "^0.4.0",
     "@vueuse/core": "^10.1.2",
-    "browser-fs-access": "^0.33.1",
-    "compress-json": "^2.1.2",
+    "browser-fs-access": "^0.34.1",
     "dayjs": "^1.11.7",
+    "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
     "localforage": "^1.10.0",
-    "naive-ui": "^2.34.3",
+    "naive-ui": "^2.34.4",
     "normalize.css": "^8.0.1",
     "npm-run-all": "^4.1.5",
-    "pinia": "^2.0.36",
+    "pinia": "^2.1.3",
     "prettier": "^2.8.8",
     "sass": "^1.62.1",
+    "sequency": "^0.20.0",
     "tsx": "^3.12.7",
     "typescript": "^5.0.4",
-    "unocss": "0.51.12",
-    "vite": "^4.3.5",
-    "vite-plugin-monkey": "^3.2.1",
-    "vue": "^3.3.1",
-    "vue-router": "^4.2.0",
-    "vue-tsc": "^1.6.4"
+    "unocss": "^0.52.4",
+    "vite": "^4.3.9",
+    "vite-plugin-monkey": "^3.2.2",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.2",
+    "vue-tsc": "^1.6.5"
   },
   "volta": {
     "node": "18.13.0"
