--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "naive-ui": "^2.34.4",
     "normalize.css": "^8.0.1",
     "npm-run-all": "^4.1.5",
+    "p-limit": "4.0.0",
     "pinia": "^2.1.3",
     "prettier": "^2.8.8",
     "sass": "^1.62.1",
