--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,13 +1,11 @@
 {
   "compilerOptions": {
+    "target": "ESNext",
     "composite": true,
     "skipLibCheck": true,
     "module": "ESNext",
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true
   },
-  "include": [
-    "vite.config.ts",
-    "plugins"
-  ]
+  "include": ["vite.config.ts", "plugins", "scripts"]
 }
