--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^0.11.0",
     "@types/file-saver": "^2.0.5",
+    "@types/fs-extra": "11.0.1",
     "@types/node": "^18.16.16",
     "@types/prettier": "^2.7.3",
     "@vitejs/plugin-legacy": "^4.0.4",
@@ -24,6 +25,7 @@
     "browser-fs-access": "^0.34.1",
     "dayjs": "^1.11.7",
     "file-saver": "^2.0.5",
+    "fs-extra": "11.1.1",
     "jszip": "^3.10.1",
     "localforage": "^1.10.0",
     "naive-ui": "^2.34.4",
