--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "serve": "vite",
-    "build": "run-p type-check build-only",
+    "build": "vite build",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit"
@@ -43,7 +43,7 @@
     "vite-plugin-monkey": "^3.2.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2",
-    "vue-tsc": "^1.6.5"
+    "vue-tsc": "^1.7.13"
   },
   "volta": {
     "node": "18.13.0"
