--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "@intlify/unplugin-vue-i18n": "^0.11.0",
     "@types/file-saver": "^2.0.5",
     "@types/fs-extra": "11.0.1",
     "@types/node": "^18.16.16",
@@ -42,6 +41,7 @@
     "vite": "^4.3.9",
     "vite-plugin-monkey": "^3.2.2",
     "vue": "^3.3.4",
+    "vue-i18n": "9.3.0-beta.19",
     "vue-router": "^4.2.2",
     "vue-tsc": "^1.7.13"
   },
