--- a/.github/workflows/sync-gitee.yml
+++ b/.github/workflows/sync-gitee.yml
@@ -16,16 +16,17 @@ jobs:
       - name: Sync Gitee Mirror
         uses: Yikun/hub-mirror-action@master
         with:
-          src: github/lisonge
-          dst: gitee/gkd-viewer
+          src: github/gkd-kit
+          dst: gitee/gkd-kit
           dst_key: ${{ secrets.GITEE_RSA_PRIVATE_KEY }}
           dst_token: ${{ secrets.GITEE_TOKEN }}
-          static_list: 'gkd-viewer'
+          static_list: 'snapshot-inspect'
+          mappings: 'snapshot-inspect>gkd-kit'
 
       - name: Build Gitee Pages
         uses: yanglbme/gitee-pages-action@main
         with:
           gitee-username: ${{ secrets.GITEE_USERNAME }}
           gitee-password: ${{ secrets.GITEE_PASSWORD }}
-          gitee-repo: gkd-viewer/gkd-viewer
+          gitee-repo: gkd-kit/gkd-kit
           branch: gh-pages
