--- a/.github/workflows/sync-gitee.yml
+++ b/.github/workflows/sync-gitee.yml
@@ -20,8 +20,8 @@ jobs:
           dst: gitee/gkd-kit
           dst_key: ${{ secrets.GITEE_RSA_PRIVATE_KEY }}
           dst_token: ${{ secrets.GITEE_TOKEN }}
-          static_list: 'snapshot-inspect'
-          mappings: 'snapshot-inspect=>gkd-kit'
+          static_list: 'inspect'
+          mappings: 'inspect=>gkd-kit'
 
       - name: Build Gitee Pages
         uses: yanglbme/gitee-pages-action@main
