--- a/package.json
+++ b/package.json
@@ -11,27 +11,27 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@gkd-kit/selector": "0.0.2",
     "@types/file-saver": "^2.0.5",
-    "@types/fs-extra": "11.0.1",
+    "@types/fs-extra": "^11.0.1",
     "@types/node": "^18.16.16",
     "@types/prettier": "^2.7.3",
     "@vitejs/plugin-legacy": "^4.0.4",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/tsconfig": "^0.4.0",
-    "@vueuse/components": "10.1.2",
+    "@vueuse/components": "^10.1.2",
     "@vueuse/core": "^10.1.2",
     "browser-fs-access": "^0.34.1",
     "dayjs": "^1.11.8",
     "file-saver": "^2.0.5",
-    "fs-extra": "11.1.1",
-    "jest": "29.5.0",
+    "fs-extra": "^11.1.1",
     "jszip": "^3.10.1",
     "localforage": "^1.10.0",
     "naive-ui": "^2.34.4",
     "normalize.css": "^8.0.1",
     "npm-run-all": "^4.1.5",
-    "p-limit": "4.0.0",
+    "p-limit": "^4.0.0",
     "pinia": "^2.1.3",
     "prettier": "^2.8.8",
     "sass": "^1.63.3",
@@ -42,7 +42,7 @@
     "vite": "^4.3.9",
     "vite-plugin-monkey": "^3.2.2",
     "vue": "^3.3.4",
-    "vue-i18n": "9.3.0-beta.19",
+    "vue-i18n": "^9.3.0-beta.19",
     "vue-router": "^4.2.2",
     "vue-tsc": "^1.7.13"
   },
