--- a/.github/workflows/sync-gitee.yml
+++ b/.github/workflows/sync-gitee.yml
@@ -13,17 +13,18 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Sync Gitee Mirror
+      - name: Sync Mirror
         uses: Yikun/hub-mirror-action@master
         with:
           src: github/gkd-kit
+          src_account_type: org
           dst: gitee/gkd-kit
           dst_key: ${{ secrets.GITEE_RSA_PRIVATE_KEY }}
           dst_token: ${{ secrets.GITEE_TOKEN }}
           static_list: 'inspect'
           mappings: 'inspect=>gkd-kit'
 
-      - name: Build Gitee Pages
+      - name: Build Pages
         uses: yanglbme/gitee-pages-action@main
         with:
           gitee-username: ${{ secrets.GITEE_USERNAME }}
