--- a/.github/workflows/sync-gitee.yml
+++ b/.github/workflows/sync-gitee.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Sync Mirror
         uses: Yikun/hub-mirror-action@master
         with:
+          debug: true
           src: github/gkd-kit
           src_account_type: org
           dst: gitee/gkd-kit
