--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prettier": "^2.8.8",
     "sass": "^1.63.3",
     "sequency": "^0.20.0",
+    "simple-git": "3.19.1",
     "tsx": "^3.12.7",
     "typescript": "^5.1.3",
     "unocss": "^0.53.1",
