--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vueuse/components": "^10.3.0",
     "@vueuse/core": "^10.3.0",
     "browser-fs-access": "^0.34.1",
+    "compressorjs": "1.2.1",
     "dayjs": "^1.11.9",
     "file-saver": "^2.0.5",
     "fs-extra": "^11.1.1",
