--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -13,14 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: volta-cli/action@v3
-
-      - name: download volta node
-        uses: nick-fields/retry@v2
+      - uses: actions/setup-node@v3
         with:
-          timeout_seconds: 60
-          max_attempts: 3
-          command: node -v
+          node-version: 20
 
       - uses: pnpm/action-setup@v2
       - run: pnpm -v
