--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "@gkd-kit/inspect",
   "version": "0.0.0",
-  "private": true,
   "type": "module",
   "scripts": {
     "serve": "vite",
     "build": "vite build",
+    "build:mirror": "cross-env MIRROR=ON vite build",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
+  "files": [
+    "./dist"
+  ],
   "dependencies": {
     "@gkd-kit/selector": "0.0.14",
     "@types/file-saver": "^2.0.5",
@@ -22,7 +29,8 @@
     "@vueuse/components": "^10.3.0",
     "@vueuse/core": "^10.3.0",
     "browser-fs-access": "^0.34.1",
-    "compressorjs": "1.2.1",
+    "compressorjs": "^1.2.1",
+    "cross-env": "^7.0.3",
     "dayjs": "^1.11.9",
     "file-saver": "^2.0.5",
     "fs-extra": "^11.1.1",
@@ -30,6 +38,7 @@
     "jszip": "^3.10.1",
     "localforage": "^1.10.0",
     "naive-ui": "^2.35.0",
+    "node-html-parser": "6.1.11",
     "normalize.css": "^8.0.1",
     "npm-run-all": "^4.1.5",
     "p-limit": "^4.0.0",
