--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,5 +7,5 @@
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts", "plugins", "scripts"]
+  "include": ["vite.config.ts", "plugins", "scripts", "package.json"]
 }
