--- a/package.json
+++ b/package.json
@@ -19,21 +19,21 @@
   ],
   "dependencies": {
     "@gkd-kit/selector": "0.0.16",
-    "@types/file-saver": "^2.0.5",
-    "@types/fs-extra": "^11.0.1",
-    "@types/node": "^20.5.6",
+    "@types/file-saver": "^2.0.7",
+    "@types/fs-extra": "^11.0.4",
+    "@types/node": "^20.10.3",
     "@vitejs/plugin-legacy": "^4.1.1",
-    "@vitejs/plugin-vue": "^4.3.3",
-    "@vitejs/plugin-vue-jsx": "^3.0.2",
+    "@vitejs/plugin-vue": "^4.5.1",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/tsconfig": "^0.4.0",
-    "@vueuse/components": "^10.3.0",
-    "@vueuse/core": "^10.3.0",
-    "browser-fs-access": "^0.34.1",
+    "@vueuse/components": "^10.6.1",
+    "@vueuse/core": "^10.6.1",
+    "browser-fs-access": "^0.35.0",
     "compressorjs": "^1.2.1",
     "cross-env": "^7.0.3",
-    "dayjs": "^1.11.9",
+    "dayjs": "^1.11.10",
     "file-saver": "^2.0.5",
-    "fs-extra": "^11.1.1",
+    "fs-extra": "^11.2.0",
     "json5": "^2.2.3",
     "jszip": "^3.10.1",
     "localforage": "^1.10.0",
@@ -41,21 +41,20 @@
     "node-html-parser": "6.1.11",
     "normalize.css": "^8.0.1",
     "npm-run-all": "^4.1.5",
-    "p-limit": "^4.0.0",
-    "pinia": "^2.1.6",
-    "prettier": "^3.0.2",
-    "sass": "^1.66.1",
-    "sequency": "^0.20.0",
-    "simple-git": "3.19.1",
-    "tsx": "^3.12.7",
-    "typescript": "^5.2.2",
-    "unocss": "^0.53.5",
-    "vite": "^4.4.9",
-    "vite-plugin-monkey": "^3.4.2",
-    "vue": "^3.3.4",
-    "vue-i18n": "^9.3.0-beta.19",
-    "vue-router": "^4.2.4",
-    "vue-tsc": "^1.8.8"
+    "p-limit": "^5.0.0",
+    "pinia": "^2.1.7",
+    "prettier": "^3.1.0",
+    "sass": "^1.69.5",
+    "simple-git": "3.21.0",
+    "tsx": "^4.6.2",
+    "typescript": "^5.3.2",
+    "unocss": "^0.58.0",
+    "vite": "^4.5.0",
+    "vite-plugin-monkey": "^3.5.0",
+    "vue": "^3.3.9",
+    "vue-i18n": "^9.8.0",
+    "vue-router": "^4.2.5",
+    "vue-tsc": "^1.8.24"
   },
   "volta": {
     "node": "18.13.0"
