feat: 选择器路径视图

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "noImplicitAny": false,
     "noEmit": true,
     "jsx": "preserve",
     /* Linting */
