--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "serve": "vite",
+    "serve": "vite --debug hmr",
     "build": "vite build",
     "build:mirror": "cross-env MIRROR=ON vite build",
     "preview": "vite preview",
@@ -18,16 +18,17 @@
     "./dist"
   ],
   "dependencies": {
+    "@antv/g6": "^4.8.24",
     "@gkd-kit/selector": "0.0.16",
     "@types/file-saver": "^2.0.7",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^20.10.3",
-    "@vitejs/plugin-legacy": "^4.1.1",
-    "@vitejs/plugin-vue": "^4.5.1",
+    "@types/node": "^20.10.6",
+    "@vitejs/plugin-legacy": "^5.2.0",
+    "@vitejs/plugin-vue": "^5.0.2",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vue/tsconfig": "^0.4.0",
-    "@vueuse/components": "^10.6.1",
-    "@vueuse/core": "^10.6.1",
+    "@vue/tsconfig": "^0.5.1",
+    "@vueuse/components": "^10.7.1",
+    "@vueuse/core": "^10.7.1",
     "browser-fs-access": "^0.35.0",
     "compressorjs": "^1.2.1",
     "cross-env": "^7.0.3",
@@ -37,24 +38,24 @@
     "json5": "^2.2.3",
     "jszip": "^3.10.1",
     "localforage": "^1.10.0",
-    "naive-ui": "^2.35.0",
+    "naive-ui": "^2.36.0",
     "node-html-parser": "6.1.11",
     "normalize.css": "^8.0.1",
     "npm-run-all": "^4.1.5",
     "p-limit": "^5.0.0",
     "pinia": "^2.1.7",
-    "prettier": "^3.1.0",
-    "sass": "^1.69.5",
-    "simple-git": "3.21.0",
-    "tsx": "^4.6.2",
-    "typescript": "^5.3.2",
-    "unocss": "^0.58.0",
-    "vite": "^4.5.0",
-    "vite-plugin-monkey": "^3.5.0",
-    "vue": "^3.3.9",
+    "prettier": "^3.1.1",
+    "sass": "^1.69.7",
+    "simple-git": "3.22.0",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3",
+    "unocss": "^0.58.3",
+    "vite": "^5.0.10",
+    "vite-plugin-monkey": "^3.5.1",
+    "vue": "^3.4.5",
     "vue-i18n": "^9.8.0",
     "vue-router": "^4.2.5",
-    "vue-tsc": "^1.8.24"
+    "vue-tsc": "^1.8.27"
   },
   "volta": {
     "node": "18.13.0"
