--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -34,8 +34,9 @@ jobs:
       - run: git checkout .
       - run: curl -X PUT 'https://registry-direct.npmmirror.com/@gkd-kit/inspect/sync'
 
-      - uses: peaceiris/actions-gh-pages@v3
+      - uses: cloudflare/pages-action@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
-          cname: i.gkd.li
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          projectName: gkd-inspect
+          directory: dist
