--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "serve": "vite --debug hmr",
+    "dev": "vite",
     "build": "vite build",
     "build:mirror": "cross-env MIRROR=ON vite build",
     "preview": "vite preview",
@@ -23,12 +23,12 @@
   "dependencies": {
     "@antv/g6": "^4.8.24",
     "@gkd-kit/selector": "0.0.20",
-    "@rushstack/eslint-patch": "^1.7.1",
+    "@rushstack/eslint-patch": "^1.7.2",
     "@types/file-saver": "^2.0.7",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^20.11.6",
-    "@vitejs/plugin-legacy": "^5.2.0",
-    "@vitejs/plugin-vue": "^5.0.3",
+    "@types/node": "^20.11.17",
+    "@vitejs/plugin-legacy": "^5.3.0",
+    "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
@@ -42,12 +42,12 @@
     "eslint": "^8.56.0",
     "eslint-define-config": "^2.1.0",
     "eslint-plugin-unused-imports": "3.0.0",
-    "eslint-plugin-vue": "^9.20.1",
+    "eslint-plugin-vue": "^9.21.1",
     "file-saver": "^2.0.5",
     "fs-extra": "^11.2.0",
     "json5": "^2.2.3",
     "jszip": "^3.10.1",
-    "lint-staged": "^15.2.0",
+    "lint-staged": "^15.2.2",
     "localforage": "^1.10.0",
     "naive-ui": "^2.37.3",
     "node-html-parser": "^6.1.12",
@@ -55,24 +55,24 @@
     "npm-run-all": "^4.1.5",
     "p-limit": "^5.0.0",
     "pinia": "^2.1.7",
-    "prettier": "^3.2.4",
+    "prettier": "^3.2.5",
     "sass": "^1.70.0",
     "simple-git": "^3.22.0",
     "simple-git-hooks": "^2.9.0",
-    "tsx": "^4.7.0",
+    "tsx": "^4.7.1",
     "typescript": "^5.3.3",
-    "unocss": "^0.58.3",
-    "vite": "^5.0.12",
+    "unocss": "^0.58.5",
+    "vite": "^5.1.1",
     "vite-plugin-monkey": "^3.5.1",
-    "vue": "^3.4.15",
-    "vue-i18n": "^9.9.0",
+    "vue": "^3.4.18",
+    "vue-i18n": "^9.9.1",
     "vue-router": "^4.2.5",
     "vue-tsc": "^1.8.27"
   },
   "volta": {
-    "node": "18.13.0"
+    "node": "20.11.0"
   },
-  "packageManager": "pnpm@8.6.0",
+  "packageManager": "pnpm@8.15.1",
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged"
   },
