--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.11.19",
+    "@types/qrcode": "^1.5.5",
     "@vitejs/plugin-legacy": "^5.3.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
@@ -56,6 +57,7 @@
     "p-limit": "^5.0.0",
     "pinia": "^2.1.7",
     "prettier": "^3.2.5",
+    "qrcode": "^1.5.3",
     "sass": "^1.71.0",
     "simple-git": "^3.22.0",
     "simple-git-hooks": "^2.9.0",
