--- a/package.json
+++ b/package.json
@@ -24,33 +24,34 @@
     "@antv/g6": "^4.8.24",
     "@gkd-kit/selector": "0.0.20",
     "@rushstack/eslint-patch": "^1.7.2",
+    "@tsconfig/node20": "^20.1.2",
     "@types/file-saver": "^2.0.7",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^20.11.19",
+    "@types/node": "^20.11.24",
     "@types/qrcode": "^1.5.5",
-    "@vitejs/plugin-legacy": "^5.3.0",
+    "@vitejs/plugin-legacy": "^5.3.1",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.1",
-    "@vueuse/components": "^10.7.2",
-    "@vueuse/core": "^10.7.2",
+    "@vueuse/components": "^10.9.0",
+    "@vueuse/core": "^10.9.0",
     "browser-fs-access": "^0.35.0",
     "compressorjs": "^1.2.1",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.10",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-define-config": "^2.1.0",
     "eslint-plugin-unused-imports": "3.1.0",
-    "eslint-plugin-vue": "^9.21.1",
+    "eslint-plugin-vue": "^9.22.0",
     "file-saver": "^2.0.5",
     "fs-extra": "^11.2.0",
     "json5": "^2.2.3",
     "jszip": "^3.10.1",
     "lint-staged": "^15.2.2",
     "localforage": "^1.10.0",
-    "naive-ui": "^2.37.3",
+    "naive-ui": "^2.38.1",
     "node-html-parser": "^6.1.12",
     "normalize.css": "^8.0.1",
     "npm-run-all": "^4.1.5",
@@ -58,23 +59,23 @@
     "pinia": "^2.1.7",
     "prettier": "^3.2.5",
     "qrcode": "^1.5.3",
-    "sass": "^1.71.0",
+    "sass": "^1.71.1",
     "simple-git": "^3.22.0",
     "simple-git-hooks": "^2.9.0",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3",
     "unocss": "^0.58.5",
-    "vite": "^5.1.3",
+    "vite": "^5.1.4",
     "vite-plugin-monkey": "^3.5.1",
-    "vue": "^3.4.19",
-    "vue-i18n": "^9.9.1",
-    "vue-router": "^4.2.5",
+    "vue": "^3.4.21",
+    "vue-i18n": "^9.10.1",
+    "vue-router": "^4.3.0",
     "vue-tsc": "^1.8.27"
   },
   "volta": {
     "node": "20.11.0"
   },
-  "packageManager": "pnpm@8.15.1",
+  "packageManager": "pnpm@8.15.4",
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged"
   },
