feat: 分享提醒弹窗

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,7 +5,9 @@
     "vitest.config.*",
     "cypress.config.*",
     "nightwatch.conf.*",
-    "playwright.config.*"
+    "playwright.config.*",
+    "plugins",
+    "scripts",
   ],
   "compilerOptions": {
     "composite": true,
