feat: wasm matches

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   ],
   "dependencies": {
     "@antv/g6": "^4.8.24",
-    "@gkd-kit/selector": "0.0.22",
+    "@gkd-kit/selector": "0.0.23",
+    "@gkd-kit/wasm_matches": "0.0.1",
     "@rushstack/eslint-patch": "^1.7.2",
     "@tsconfig/node20": "^20.1.2",
     "@types/file-saver": "^2.0.7",
