--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,7 +7,7 @@
     "nightwatch.conf.*",
     "playwright.config.*",
     "plugins",
-    "scripts",
+    "scripts"
   ],
   "compilerOptions": {
     "composite": true,
