--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "@tsconfig/node20": "20.1.4",
     "@types/file-saver": "2.0.7",
     "@types/fs-extra": "11.0.4",
-    "@types/node": "20.14.10",
+    "@types/node": "22.0.0",
     "@types/qrcode": "1.5.5",
     "@vitejs/plugin-legacy": "5.4.1",
-    "@vitejs/plugin-vue": "5.0.5",
+    "@vitejs/plugin-vue": "5.1.1",
     "@vitejs/plugin-vue-jsx": "4.0.0",
     "@vue/eslint-config-prettier": "9.0.0",
     "@vue/eslint-config-typescript": "13.0.0",
@@ -41,7 +41,7 @@
     "browser-fs-access": "0.35.0",
     "compressorjs": "1.2.1",
     "cross-env": "7.0.3",
-    "dayjs": "1.11.11",
+    "dayjs": "1.11.12",
     "eslint": "8.57.0",
     "eslint-define-config": "2.1.0",
     "eslint-plugin-unused-imports": "3.2.0",
@@ -52,31 +52,33 @@
     "jszip": "3.10.1",
     "lint-staged": "15.2.7",
     "localforage": "1.10.0",
-    "naive-ui": "2.38.2",
+    "naive-ui": "2.39.0",
     "normalize.css": "8.0.1",
     "p-limit": "6.1.0",
-    "pinia": "2.1.7",
-    "prettier": "3.3.2",
+    "pinia": "2.2.0",
+    "prettier": "3.3.3",
     "qrcode": "1.5.3",
-    "sass": "1.77.7",
+    "sass": "1.77.8",
     "simple-git": "3.25.0",
     "simple-git-hooks": "2.11.1",
     "tsx": "4.16.2",
-    "typescript": "5.5.3",
+    "typescript": "5.5.4",
     "universal-base64url": "1.1.0",
-    "unocss": "0.61.3",
+    "unocss": "0.61.8",
+    "unplugin-auto-import": "0.18.2",
+    "unplugin-vue-components": "0.27.3",
     "user-attachments": "1.1.2",
-    "vite": "5.3.3",
-    "vite-plugin-monkey": "4.0.4",
-    "vue": "3.4.31",
+    "vite": "5.3.5",
+    "vite-plugin-monkey": "4.0.6",
+    "vue": "3.4.34",
     "vue-i18n": "9.13.1",
     "vue-router": "4.4.0",
-    "vue-tsc": "2.0.26"
+    "vue-tsc": "2.0.29"
   },
   "volta": {
-    "node": "20.12.2"
+    "node": "22.5.1"
   },
-  "packageManager": "pnpm@9.5.0",
+  "packageManager": "pnpm@9.6.0",
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged"
   },
