--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,11 +1,16 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["src/**/*", "src/**/*.vue"],
+  "include": [
+    "src/**/*",
+    "src/**/*.vue",
+    "auto-import-components.d.ts",
+    "auto-import.d.ts"
+  ],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-    "lib": ["ESNext", "DOM", "DOM.Iterable"],
+    "lib": ["ESNext"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
