--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -13,6 +13,7 @@
     "composite": true,
     "noEmit": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
+    "lib": ["ESNext"],
 
     "module": "ESNext",
     "moduleResolution": "Bundler",
