feat: rule check

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "@antv/g6": "4.8.24",
+    "@gkd-kit/api": "0.3.3",
     "@gkd-kit/selector": "0.4.2",
     "@gkd-kit/wasm_matches": "0.0.1",
     "@rushstack/eslint-patch": "1.10.3",
