--- a/package.json
+++ b/package.json
@@ -25,24 +25,24 @@
     "@gkd-kit/api": "0.3.3",
     "@gkd-kit/selector": "0.4.2",
     "@gkd-kit/wasm_matches": "0.0.1",
-    "@rushstack/eslint-patch": "1.10.3",
+    "@rushstack/eslint-patch": "1.10.4",
     "@tsconfig/node20": "20.1.4",
     "@types/file-saver": "2.0.7",
     "@types/fs-extra": "11.0.4",
-    "@types/node": "22.0.0",
+    "@types/node": "22.5.1",
     "@types/qrcode": "1.5.5",
-    "@vitejs/plugin-legacy": "5.4.1",
-    "@vitejs/plugin-vue": "5.1.1",
-    "@vitejs/plugin-vue-jsx": "4.0.0",
+    "@vitejs/plugin-legacy": "5.4.2",
+    "@vitejs/plugin-vue": "5.1.2",
+    "@vitejs/plugin-vue-jsx": "4.0.1",
     "@vue/eslint-config-prettier": "9.0.0",
     "@vue/eslint-config-typescript": "13.0.0",
     "@vue/tsconfig": "0.5.1",
-    "@vueuse/components": "10.11.0",
-    "@vueuse/core": "10.11.0",
+    "@vueuse/components": "11.0.3",
+    "@vueuse/core": "11.0.3",
     "browser-fs-access": "0.35.0",
     "compressorjs": "1.2.1",
     "cross-env": "7.0.3",
-    "dayjs": "1.11.12",
+    "dayjs": "1.11.13",
     "eslint": "8.57.0",
     "eslint-define-config": "2.1.0",
     "eslint-plugin-unused-imports": "3.2.0",
@@ -51,34 +51,34 @@
     "fs-extra": "11.2.0",
     "json5": "2.2.3",
     "jszip": "3.10.1",
-    "lint-staged": "15.2.7",
+    "lint-staged": "15.2.9",
     "localforage": "1.10.0",
     "naive-ui": "2.39.0",
     "normalize.css": "8.0.1",
     "p-limit": "6.1.0",
-    "pinia": "2.2.0",
     "prettier": "3.3.3",
-    "qrcode": "1.5.3",
+    "qrcode": "1.5.4",
     "sass": "1.77.8",
     "simple-git": "3.25.0",
     "simple-git-hooks": "2.11.1",
-    "tsx": "4.16.2",
+    "tsx": "4.19.0",
     "typescript": "5.5.4",
     "universal-base64url": "1.1.0",
-    "unocss": "0.61.8",
+    "unocss": "0.62.3",
     "unplugin-auto-import": "0.18.2",
-    "unplugin-vue-components": "0.27.3",
+    "unplugin-vue-components": "0.27.4",
     "user-attachments": "1.1.2",
-    "vite": "5.3.5",
+    "vite": "5.4.2",
     "vite-plugin-monkey": "4.0.6",
-    "vue": "3.4.34",
-    "vue-router": "4.4.0",
-    "vue-tsc": "2.0.29"
+    "vue": "3.4.38",
+    "vue-router": "4.4.3",
+    "vue-tsc": "2.1.2"
   },
   "volta": {
-    "node": "22.5.1"
+    "node": "22.7.0",
+    "pnpm": "9.9.0"
   },
-  "packageManager": "pnpm@9.6.0",
+  "packageManager": "pnpm@9.9.0",
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged"
   },
