--- a/package.json
+++ b/package.json
@@ -22,17 +22,17 @@
   ],
   "dependencies": {
     "@antv/g6": "4.8.24",
-    "@gkd-kit/api": "0.3.3",
+    "@gkd-kit/api": "0.4.0",
     "@gkd-kit/selector": "0.4.2",
     "@gkd-kit/wasm_matches": "0.0.1",
     "@rushstack/eslint-patch": "1.10.4",
     "@tsconfig/node20": "20.1.4",
     "@types/file-saver": "2.0.7",
     "@types/fs-extra": "11.0.4",
-    "@types/node": "22.5.1",
+    "@types/node": "22.5.4",
     "@types/qrcode": "1.5.5",
     "@vitejs/plugin-legacy": "5.4.2",
-    "@vitejs/plugin-vue": "5.1.2",
+    "@vitejs/plugin-vue": "5.1.3",
     "@vitejs/plugin-vue-jsx": "4.0.1",
     "@vue/eslint-config-prettier": "9.0.0",
     "@vue/eslint-config-typescript": "13.0.0",
@@ -46,33 +46,32 @@
     "eslint": "8.57.0",
     "eslint-define-config": "2.1.0",
     "eslint-plugin-unused-imports": "3.2.0",
-    "eslint-plugin-vue": "9.27.0",
+    "eslint-plugin-vue": "9.28.0",
     "file-saver": "2.0.5",
     "fs-extra": "11.2.0",
     "json5": "2.2.3",
     "jszip": "3.10.1",
-    "lint-staged": "15.2.9",
+    "lint-staged": "15.2.10",
     "localforage": "1.10.0",
     "naive-ui": "2.39.0",
     "normalize.css": "8.0.1",
     "p-limit": "6.1.0",
     "prettier": "3.3.3",
     "qrcode": "1.5.4",
-    "sass": "1.77.8",
-    "simple-git": "3.25.0",
+    "sass": "1.78.0",
+    "simple-git": "3.26.0",
     "simple-git-hooks": "2.11.1",
-    "tsx": "4.19.0",
-    "typescript": "5.5.4",
+    "tsx": "4.19.1",
+    "typescript": "5.6.2",
     "universal-base64url": "1.1.0",
     "unocss": "0.62.3",
-    "unplugin-auto-import": "0.18.2",
+    "unplugin-auto-import": "0.18.3",
     "unplugin-vue-components": "0.27.4",
     "user-attachments": "1.1.2",
-    "vite": "5.4.2",
+    "vite": "5.4.5",
     "vite-plugin-monkey": "4.0.6",
-    "vue": "3.4.38",
-    "vue-router": "4.4.3",
-    "vue-tsc": "2.1.2"
+    "vue": "3.5.4",
+    "vue-router": "4.4.5"
   },
   "volta": {
     "node": "22.7.0",
