--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "universal-base64url": "1.1.0",
     "unocss": "0.63.4",
     "unplugin-auto-import": "0.18.3",
+    "unplugin-data": "0.1.0",
     "unplugin-vue-components": "0.27.4",
     "user-attachments": "1.1.2",
     "vite": "5.4.8",
