--- a/package.json
+++ b/package.json
@@ -21,61 +21,64 @@
     "./dist"
   ],
   "dependencies": {
-    "@antv/g6": "4.8.24",
+    "@antv/g6": "5.0.42",
+    "@eslint/js": "9.20.0",
     "@gkd-kit/api": "0.6.0",
-    "@gkd-kit/selector": "0.4.2",
+    "@gkd-kit/selector": "0.5.4",
     "@gkd-kit/wasm_matches": "0.0.1",
     "@tsconfig/node20": "20.1.4",
     "@types/file-saver": "2.0.7",
     "@types/fs-extra": "11.0.4",
-    "@types/node": "22.7.9",
-    "@vitejs/plugin-legacy": "6.0.0",
+    "@types/node": "22.13.2",
+    "@vitejs/plugin-legacy": "6.0.1",
     "@vitejs/plugin-vue": "5.2.1",
     "@vitejs/plugin-vue-jsx": "4.1.1",
-    "@vue/eslint-config-prettier": "10.1.0",
-    "@vue/eslint-config-typescript": "14.1.4",
+    "@vue/eslint-config-prettier": "10.2.0",
+    "@vue/eslint-config-typescript": "14.4.0",
     "@vue/tsconfig": "0.7.0",
-    "@vueuse/components": "12.0.0",
-    "@vueuse/core": "12.0.0",
+    "@vueuse/components": "12.5.0",
+    "@vueuse/core": "12.5.0",
     "browser-fs-access": "0.35.0",
     "compressorjs": "1.2.1",
     "cross-env": "7.0.3",
     "dayjs": "1.11.13",
-    "eslint": "9.17.0",
+    "eslint": "9.20.1",
+    "eslint-config-prettier": "10.0.1",
     "eslint-define-config": "2.1.0",
     "eslint-plugin-unused-imports": "4.1.4",
     "eslint-plugin-vue": "9.32.0",
     "file-saver": "2.0.5",
     "json5": "2.2.3",
     "jszip": "3.10.1",
-    "lint-staged": "15.2.11",
+    "lint-staged": "15.4.3",
     "localforage": "1.10.0",
-    "naive-ui": "2.40.3",
+    "naive-ui": "2.41.0",
     "normalize.css": "8.0.1",
-    "p-limit": "6.1.0",
-    "pinia": "2.3.0",
-    "prettier": "3.4.2",
-    "sass": "1.83.0",
+    "p-limit": "6.2.0",
+    "pinia": "3.0.1",
+    "prettier": "3.5.0",
+    "sass": "1.84.0",
     "simple-git": "3.27.0",
     "simple-git-hooks": "2.11.1",
     "tsx": "4.19.2",
-    "typescript": "5.7.2",
+    "typescript": "5.7.3",
+    "typescript-eslint": "8.24.0",
     "universal-base64url": "1.1.0",
-    "unocss": "0.65.1",
-    "unplugin-auto-import": "0.19.0",
+    "unocss": "65.4.3",
+    "unplugin-auto-import": "19.0.0",
     "unplugin-data": "0.1.1",
-    "unplugin-vue-components": "0.27.5",
+    "unplugin-vue-components": "28.0.0",
     "user-attachments": "2.0.2",
-    "vite": "6.0.3",
-    "vite-plugin-monkey": "5.0.0",
+    "vite": "6.1.0",
+    "vite-plugin-monkey": "5.0.7",
     "vue": "3.5.13",
     "vue-router": "4.5.0"
   },
   "volta": {
     "node": "22.10.0",
-    "pnpm": "9.15.0"
+    "pnpm": "10.4.1"
   },
-  "packageManager": "pnpm@9.15.0",
+  "packageManager": "pnpm@10.4.1",
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged"
   },
@@ -86,6 +89,14 @@
     ],
     "*.{json,yml,html}": [
       "prettier --cache --write"
+    ]
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "core-js",
+      "esbuild",
+      "simple-git-hooks"
     ]
   }
 }
