--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "@antv/g6": "5.0.43",
     "@eslint/js": "9.21.0",
     "@gkd-kit/api": "0.6.0",
-    "@gkd-kit/selector": "0.5.13",
+    "@gkd-kit/selector": "0.5.21",
     "@gkd-kit/wasm_matches": "0.0.1",
     "@tsconfig/node20": "20.1.4",
     "@types/file-saver": "2.0.7",
     "@types/fs-extra": "11.0.4",
+    "@types/lodash-es": "4.17.12",
     "@types/node": "22.13.5",
     "@vitejs/plugin-legacy": "6.0.1",
     "@vitejs/plugin-vue": "5.2.1",
@@ -52,6 +53,7 @@
     "jszip": "3.10.1",
     "lint-staged": "15.4.3",
     "localforage": "1.10.0",
+    "lodash-es": "4.17.21",
     "naive-ui": "2.41.0",
     "normalize.css": "8.0.1",
     "p-limit": "6.2.0",
@@ -76,9 +78,9 @@
   },
   "volta": {
     "node": "22.10.0",
-    "pnpm": "10.4.1"
+    "pnpm": "10.5.2"
   },
-  "packageManager": "pnpm@10.4.1",
+  "packageManager": "pnpm@10.5.2",
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged"
   },
