--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit",
-    "lint": "eslint --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx --fix --ignore-path .gitignore .",
+    "lint": "eslint --cache --fix .",
     "format": "prettier --cache --write --ignore-unknown .",
     "postinstall": "simple-git-hooks",
     "postpublish": "curl -X PUT https://registry-direct.npmmirror.com/@gkd-kit/inspect/sync"
@@ -22,66 +22,67 @@
     "./dist"
   ],
   "dependencies": {
-    "@antv/g6": "5.0.43",
-    "@eslint/js": "9.21.0",
-    "@gkd-kit/api": "0.6.0",
+    "@antv/g6": "5.0.49",
+    "@eslint/js": "9.29.0",
+    "@gkd-kit/api": "0.7.3",
     "@gkd-kit/selector": "0.5.22",
     "@gkd-kit/wasm_matches": "0.0.1",
-    "@tsconfig/node20": "20.1.4",
+    "@tsconfig/node20": "20.1.6",
     "@types/file-saver": "2.0.7",
     "@types/fs-extra": "11.0.4",
     "@types/lodash-es": "4.17.12",
-    "@types/node": "22.13.5",
-    "@vitejs/plugin-legacy": "6.0.1",
-    "@vitejs/plugin-vue": "5.2.1",
-    "@vitejs/plugin-vue-jsx": "4.1.1",
+    "@types/node": "24.0.4",
+    "@vitejs/plugin-legacy": "7.0.0",
+    "@vitejs/plugin-vue": "6.0.0",
+    "@vitejs/plugin-vue-jsx": "5.0.0",
     "@vue/eslint-config-prettier": "10.2.0",
-    "@vue/eslint-config-typescript": "14.4.0",
+    "@vue/eslint-config-typescript": "14.5.1",
     "@vue/tsconfig": "0.7.0",
-    "@vueuse/components": "12.7.0",
-    "@vueuse/core": "12.7.0",
-    "browser-fs-access": "0.35.0",
+    "@vueuse/components": "13.4.0",
+    "@vueuse/core": "13.4.0",
+    "browser-fs-access": "0.38.0",
     "compressorjs": "1.2.1",
     "cross-env": "7.0.3",
     "dayjs": "1.11.13",
-    "eslint": "9.21.0",
-    "eslint-config-prettier": "10.0.1",
+    "eslint": "9.29.0",
+    "eslint-config-prettier": "10.1.5",
     "eslint-define-config": "2.1.0",
     "eslint-plugin-unused-imports": "4.1.4",
-    "eslint-plugin-vue": "9.32.0",
+    "eslint-plugin-vue": "10.2.0",
     "file-saver": "2.0.5",
+    "globals": "16.2.0",
     "json5": "2.2.3",
     "jszip": "3.10.1",
-    "lint-staged": "15.4.3",
+    "lint-staged": "16.1.2",
     "localforage": "1.10.0",
     "lodash-es": "4.17.21",
-    "naive-ui": "2.41.0",
+    "naive-ui": "2.42.0",
     "normalize.css": "8.0.1",
     "p-limit": "6.2.0",
-    "pinia": "3.0.1",
-    "prettier": "3.5.2",
-    "sass": "1.85.0",
-    "simple-git": "3.27.0",
-    "simple-git-hooks": "2.11.1",
-    "tsx": "4.19.3",
-    "typescript": "5.7.3",
-    "typescript-eslint": "8.24.1",
+    "pkg-exports": "0.2.0",
+    "prettier": "3.6.1",
+    "sass": "1.89.2",
+    "simple-git": "3.28.0",
+    "simple-git-hooks": "2.13.0",
+    "tsx": "4.20.3",
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.35.0",
     "universal-base64url": "1.1.0",
-    "unocss": "66.0.0",
-    "unplugin-auto-import": "19.1.0",
+    "unocss": "66.3.2",
+    "unplugin-auto-import": "19.3.0",
     "unplugin-data": "0.1.1",
-    "unplugin-vue-components": "28.4.0",
+    "unplugin-vue-components": "28.7.0",
     "user-attachments": "2.0.2",
-    "vite": "6.1.1",
-    "vite-plugin-monkey": "5.0.8",
-    "vue": "3.5.13",
-    "vue-router": "4.5.0"
+    "vite": "7.0.0",
+    "vite-plugin-monkey": "5.0.9",
+    "vue": "3.5.17",
+    "vue-router": "4.5.1"
   },
   "volta": {
-    "node": "22.10.0",
-    "pnpm": "10.5.2"
+    "node": "24.3.0",
+    "pnpm": "10.12.3"
   },
-  "packageManager": "pnpm@10.5.2",
+  "packageManager": "pnpm@10.12.3",
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged"
   },
