--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,13 +1,9 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": [
-    "src/**/*",
-    "src/**/*.vue",
-    "auto-import-components.d.ts",
-    "auto-import.d.ts"
-  ],
-  "exclude": ["src/**/__tests__/*"],
+  "include": ["src/**/*", "src/**/*.vue"],
   "compilerOptions": {
+    "strict": true,
+    "skipLibCheck": false,
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "lib": ["ESNext"],
