chore: update lib

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,6 +9,7 @@
     "lib": ["ESNext"],
     "baseUrl": ".",
     "erasableSyntaxOnly": true,
+    "noUncheckedIndexedAccess": false,
     "paths": {
       "@/*": ["./src/*"]
     }
