refactor: remove TrackModal component and replace with FullScreenDialog for track display
style: update App.vue to remove SCSS styles and adjust layout

style: modify html-reset.scss to hide scrollbars and clean up styles

style: adjust index.scss to use new CSS variables for width and height

fix: change root element creation in root.ts to append a new div to the body

fix: update DevicePage, ImportPage, SelectorPage, SvgPage, _404Page, HomePage, and SnapshotPage to use page-size class for consistent layout

chore: upgrade UnoCSS preset from Wind3 to Wind4

chore: remove build target from vite.config.ts

feat: add FullScreenDialog component for improved modal handling

style: create var.scss for CSS variables to manage responsive dimensions

--- a/package.json
+++ b/package.json
@@ -22,67 +22,68 @@
     "./dist"
   ],
   "dependencies": {
-    "@antv/g6": "5.0.49",
-    "@eslint/js": "9.35.0",
-    "@gkd-kit/api": "0.7.3",
+    "@antv/g6": "5.0.51",
+    "@eslint/js": "9.39.2",
+    "@gkd-kit/api": "0.8.0",
     "@gkd-kit/selector": "0.5.22",
     "@gkd-kit/wasm_matches": "0.0.1",
-    "@tsconfig/node20": "20.1.6",
+    "@tsconfig/node20": "20.1.8",
     "@types/file-saver": "2.0.7",
     "@types/fs-extra": "11.0.4",
     "@types/lodash-es": "4.17.12",
-    "@types/node": "24.5.1",
+    "@types/node": "25.0.9",
     "@vitejs/plugin-legacy": "7.2.1",
-    "@vitejs/plugin-vue": "6.0.0",
-    "@vitejs/plugin-vue-jsx": "5.1.1",
+    "@vitejs/plugin-vue": "6.0.2",
+    "@vitejs/plugin-vue-jsx": "5.1.2",
     "@vue/eslint-config-prettier": "10.2.0",
     "@vue/eslint-config-typescript": "14.6.0",
     "@vue/tsconfig": "0.8.1",
-    "@vueuse/components": "13.9.0",
-    "@vueuse/core": "13.9.0",
+    "@vueuse/components": "14.1.0",
+    "@vueuse/core": "14.1.0",
     "browser-fs-access": "0.38.0",
     "compressorjs": "1.2.1",
-    "cross-env": "10.0.0",
-    "dayjs": "1.11.18",
-    "eslint": "9.35.0",
+    "cross-env": "10.1.0",
+    "dayjs": "1.11.19",
+    "eslint": "9.39.2",
     "eslint-config-prettier": "10.1.8",
     "eslint-define-config": "2.1.0",
-    "eslint-plugin-unused-imports": "4.2.0",
-    "eslint-plugin-vue": "10.4.0",
+    "eslint-plugin-unused-imports": "4.3.0",
+    "eslint-plugin-vue": "10.7.0",
     "file-saver": "2.0.5",
-    "globals": "16.4.0",
+    "globals": "17.0.0",
     "json5": "2.2.3",
     "jszip": "3.10.1",
-    "lint-staged": "16.1.6",
+    "lint-staged": "16.2.7",
     "localforage": "1.10.0",
-    "lodash-es": "4.17.21",
-    "naive-ui": "2.43.1",
+    "lodash-es": "4.17.22",
+    "naive-ui": "2.43.2",
     "normalize.css": "8.0.1",
-    "p-limit": "7.1.1",
+    "p-limit": "7.2.0",
     "pkg-exports": "0.2.0",
-    "prettier": "3.6.2",
-    "sass": "1.92.1",
-    "simple-git": "3.28.0",
+    "prettier": "3.8.0",
+    "sass": "1.97.2",
+    "simple-git": "3.30.0",
     "simple-git-hooks": "2.13.1",
-    "tsx": "4.20.5",
-    "typescript": "5.9.2",
-    "typescript-eslint": "8.44.0",
+    "tsx": "4.21.0",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.53.1",
     "universal-base64url": "1.1.0",
-    "unocss": "66.5.1",
-    "unplugin-auto-import": "20.1.0",
+    "unocss": "66.6.0",
+    "unplugin-auto-import": "21.0.0",
     "unplugin-data": "0.1.1",
-    "unplugin-vue-components": "29.0.0",
+    "unplugin-vue-components": "31.0.0",
+    "update-browserslist-db": "1.2.3",
     "user-attachments": "2.0.2",
-    "vite": "7.1.5",
-    "vite-plugin-monkey": "7.1.4",
-    "vue": "3.5.21",
-    "vue-router": "4.5.1"
+    "vite": "7.3.1",
+    "vite-plugin-monkey": "7.1.8",
+    "vue": "3.5.27",
+    "vue-router": "4.6.4"
   },
   "volta": {
-    "node": "24.4.1",
-    "pnpm": "10.16.1"
+    "node": "24.13.0",
+    "pnpm": "10.28.1"
   },
-  "packageManager": "pnpm@10.16.1",
+  "packageManager": "pnpm@10.28.1",
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged"
   },
